--- a/ipython_notebooks/notebook editor for compute_test_1.ipynb
+++ b/ipython_notebooks/notebook editor for compute_test_1.ipynb
@@ -1,11 +1,9 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
+      "name": "python3",
       "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "language": "python"
     },
     "associatedRecipe": "compute_test_1",
     "creator": "admin",
@@ -13,38 +11,59 @@
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {}
+    "customFields": {},
+    "language_info": {
+      "name": "python",
+      "version": "3.7.13",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "modifiedBy": "admin"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "import dataiku\n",
-        "import pandas as pd, numpy as np\n",
-        "from dataiku import pandasutils as pdu\n",
-        "\n",
-        "# Read recipe inputs\n",
-        "covid19___orignal \u003d dataiku.Dataset(\"covid19___orignal\")\n",
-        "covid19___orignal_df \u003d covid19___orignal.get_dataframe()\n",
-        "\n",
-        "\n",
-        "# Compute recipe outputs from inputs\n",
-        "# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n",
-        "# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n",
-        "\n",
-        "test_1_df \u003d covid19__orignal_df.head(3)\n",
-        "\n",
-        "test_1_df \u003d covid19___orignal_df # For this sample code, simply copy input to output\n",
-        "\n",
-        "\n",
-        "# Write recipe outputs\n",
-        "test_1 \u003d dataiku.Dataset(\"test_1\")\n",
-        "test_1.write_with_schema(test_1_df)"
-      ]
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\n\n# Read recipe inputs\ncovid19___orignal \u003d dataiku.Dataset(\"covid19___orignal\")\ncovid19___orignal_df \u003d covid19___orignal.get_dataframe()\n\n\n# Compute recipe outputs from inputs\n# TODO: Replace this part by your actual code that computes the output, as a Pandas dataframe\n# NB: DSS also supports other kinds of APIs for reading and writing data. Please see doc.\n\n# test_1_df \u003d covid19__orignal_df.head(3)\n\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "test_1_df \u003d covid19___orignal_df.head(3)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# test_1_df \u003d covid19___orignal_df # For this sample code, simply copy input to output\n\n\n# Write recipe outputs\ntest_1 \u003d dataiku.Dataset(\"test_1\")\ntest_1.write_with_schema(test_1_df)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
+      ],
+      "outputs": []
     }
   ]
 }
